feat: implement static analysis for Solidity contracts using Slither
TODO: Fix slither ouput and version spec

--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ DB_HOST=localhost
 DB_PORT=5432
 DB_USER=postgres
 DB_PASSWORD=postgres
-DB_NAME=myapp
+DB_NAME=app
 DB_SSL_MODE=disable
 
 # Redis
@@ -15,13 +15,13 @@ REDIS_ADDR=localhost:6379
 REDIS_PASSWORD=
 REDIS_DB=0
 
-# SMTP
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
-SMTP_USERNAME=your-email@gmail.com
-SMTP_PASSWORD=your-app-specific-password
-SMTP_FROM=noreply@yourapp.com
-
 # JWT
 JWT_SECRET=your-secret-key
 JWT_EXPIRY=24h
+
+# Blockscan
+ETHERSCAN_API_KEY=your-api-key
+
+# Slither
+SLITHER_CONTAINER_NAME=slither
+WORKSPACE_PATH=./workspace
