chore: edit env exampl,e

--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,6 @@ ETHERSCAN_API_KEY=your-api-key
 # Slither
 SLITHER_CONTAINER_NAME=slither
 WORKSPACE_PATH=./workspace
+
+# Gemini
+GEMINI_API_KEY=get-your-own-from-aistudio
