--- a/Dockerfile.slither
+++ b/Dockerfile.slither
@@ -15,6 +15,8 @@ RUN solc-select install 0.8.20 && \
     solc-select install 0.8.19 && \
     solc-select install 0.8.0 && \
     solc-select install 0.7.6 && \
+    solc-select install 0.6.12 && \
+    solc-select install 0.5.16 && \
     solc-select use 0.8.20
 
 # Set default SOLC version
