--- a/Dockerfile.slither
+++ b/Dockerfile.slither
@@ -37,7 +37,9 @@ RUN echo '{\
     "@openzeppelin/contracts-upgradeable": "^4.9.0",\
     "@chainlink/contracts": "^0.6.1",\
     "@uniswap/v2-core": "^1.0.1",\
-    "@uniswap/v3-core": "^1.0.0"\
+    "@uniswap/v3-core": "^1.0.0",\
+    "@aave/protocol-v2": "^1.0.0",\
+    "@aave/core-v3": "^1.16.2"\
   }\
 }' > /workspace/package.json && \
 chmod 666 /workspace/package.json
