--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,9 +8,12 @@ services:
     ports:
       - "${SERVER_PORT}:${SERVER_PORT}"
     depends_on:
-      - postgres
-      - redis
-      - slither
+      slither:
+        condition: service_started
+      postgres:
+        condition: service_started
+      redis:
+        condition: service_started
     environment:
       # Server
       - SERVER_PORT=${SERVER_PORT}
@@ -37,10 +40,11 @@ services:
       - slither-network
     volumes:
       - shared-workspace:/workspace
-      - /var/run/docker.sock:/var/run/docker.sock
+      - /var/run/docker.sock:/var/run/docker.sock:ro
     restart: unless-stopped
 
   slither:
+    platform: linux/amd64
     build:
       context: .
       dockerfile: Dockerfile.slither
@@ -53,6 +57,12 @@ services:
     environment:
       - SOLC_VERSION=0.8.20
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "which", "slither"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 20s
 
   postgres:
     image: postgres:17-alpine
@@ -67,6 +77,11 @@ services:
     networks:
       - app-network
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${DB_USER} -d ${DB_NAME}"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   redis:
     image: redis:alpine
@@ -77,6 +92,11 @@ services:
     networks:
       - app-network
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
 networks:
   app-network:
